# albinos

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  integration.test.sh
API_doc/: APILibConfig.h  Albinos.h  Communication.md  LibConfig.hpp  Libconfig.h  Overview.md  index.md
API_doc/json_recipes/: alias_set.json  alias_unset.json  config_create.json  config_include.json  config_load.json  config_unload.json  setting_get.json  setting_remove.json  setting_subscribe.json  setting_unsubscribe.json  setting_update.json
albinos-cli/: .gitignore  dub.json
albinos-cli/source/: app.d
albinos-cli/source/cli/: cli.d  deserializer.d
albinos-cli/source/client/: client.d
albinos-cli/source/protocol/: protocol_type.d
albinos-editor/: albinos_editor.nimble  util.c
albinos-editor/docs/: technical_doc_editor.md
albinos-editor/src/: albinos_editor  albinos_editor.nim
albinos-editor/src/albinospkg/: cli.nim  cmd.nim  gui.nim  options.nim  util.nim
albinos-editor/src/ext/: replxx.nim
albinos-editor/src/libalbinos/: albinos.nim
albinos-gui/: ConfigManager.cpp  ConfigManager.hpp  albinos_gui.nimble  example.glade  main.cpp
albinos-gui/src/: albinos_gui.nim
albinos-gui/src/config/: config.nim
lib/: Albinos.h  Config.cpp  Config.hpp  KeyWrapper.hpp  LibError.cpp  LibError.hpp  Libconfig.h  ReturnedValue.h  Subscription.cpp  Subscription.hpp  albinos.integ.tests.cpp  doxyfile_lib  funcHub.cpp  funcHub.hpp  implem.cpp  implem.hpp
service/: albinos.service  client.hpp  db.hpp  json.hpp  main.cpp  protocol.hpp  service.hpp  service_strong_types.hpp  utils.hpp
tests/: CMakeLists.txt  lib-test.cpp  service-test.cpp
